--- a/core/templates/dashboard/super_owner/inventory.html
+++ b/core/templates/dashboard/super_owner/inventory.html
@@ -107,7 +107,7 @@
                                             <input type="number" name="qty_{{ v.id }}" class="form-control" min="0" value="{{ v.stock_qty }}">
                                         </td>
                                         <td>
-                                            <input type="number" name="price_{{ v.id }}" class="form-control" min="0" step="0.01" value="{{ v.price_override|default_if_none:'' }}" placeholder="{{ v.product.base_price }}">
+                                            <input type="text" name="price_{{ v.id }}" class="form-control" inputmode="decimal" value="{{ v.price_override|default_if_none:'' }}" placeholder="{{ v.product.base_price }}" autocomplete="off">
                                         </td>
                                         <td>
                                             <div class="form-check form-switch">
