--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 {% load math_filters %}
-<html lang="ar" dir="rtl">
+<html lang="ar" dir="rtl" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
